--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
   }
