--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "nextjs-progressbar": "^0.0.16",
+    "openai": "^4.3.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
