--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "aws-sdk": "^2.1452.0",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "knex": "^2.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "13.4.19",
     "nextjs-progressbar": "^0.0.16",
     "openai": "^4.3.0",
@@ -29,7 +33,8 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "encoding": "^0.1.13",
