ci: change to production build

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:migrate": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\"}' knex migrate:latest",
     "db:migrate:undo": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\"}' knex migrate:down",
-    "db:migrate:make": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\"}' knex migrate:make"
+    "db:migrate:make": "TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\"}' knex migrate:make",
+    "vercel-build": "prisma generate && npm run db:migrate deploy && next build"
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
