ci: change env variables to match vercel

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 POSTGRES_PRISMA_URL="postgresql://postgres@localhost:5432/kiddo_art"
+POSTGRES_URL="postgresql://postgres@localhost:5432/kiddo_art"
+NODE_ENV=development
