ci: change to production

--- a/.env.development
+++ b/.env.development
@@ -6,4 +6,4 @@
 
 POSTGRES_PRISMA_URL="postgresql://postgres@localhost:5432/kiddo_art"
 POSTGRES_URL="postgresql://postgres@localhost:5432/kiddo_art"
-NODE_ENV=development
+NODE_ENV=production
