--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "multer-s3": "^3.0.1",
     "next": "13.4.19",
     "nextjs-progressbar": "^0.0.16",
+    "node-sass": "^9.0.0",
     "openai": "^4.3.0",
     "pg": "^8.11.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "sass": "^1.68.0",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
     "uuid": "^9.0.0"
