--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "aws-sdk": "^2.1452.0",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "eslint": "8.47.0",
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "rxjs": "^7.8.1",
     "sass": "^1.68.0",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2",
