--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "vercel-build": "prisma generate && npm run db:migrate && next build"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.425.0",
     "@prisma/client": "^5.2.0",
+    "@smithy/util-stream": "^2.0.14",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -39,12 +41,12 @@
     "react-dom": "18.2.0",
     "rxjs": "^7.8.1",
     "sass": "^1.68.0",
-    "ts-node": "^10.9.1",
     "typescript": "5.2.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "encoding": "^0.1.13",
-    "prisma": "^5.2.0"
+    "prisma": "^5.2.0",
+    "ts-node": "^10.9.1"
   }
 }
